# BullyDB

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: CMyDBClass.h  DBClass.h  core.h
src/: CMyDBClass.cpp  DBClass.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
